1-cluster-scoped/longhorn-system/overlays/oracle2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: longhorn-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Longhorn'
  labels:
    app.kubernetes.io/name: argocd
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - longhorn.magopo.org
      secretName: magopo-org-tls
  rules:
    - host: longhorn.magopo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
